# CompliancePatchBench

./: .dockerignore  .gitattributes  .gitignore  ALL_10_IMPROVEMENTS.md  ALL_FIXES_COMPLETE.md  BLOCKING_ISSUES_RESOLVED.md  Blog.md  Dockerfile  FINAL_RESOLUTION.md  FINAL_STATUS.md  FINAL_SUMMARY.md  HF_SPACE_DEPLOYMENT.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PRESENTATION.md  PRODUCTION_READY.md  README.md  SELF_IMPROVEMENT.md  SUBMISSION_READY.md  TRAINING_GUIDE.md  TRAINING_RESULTS.md  VALIDATION.md  VISUAL_DEMO.md  app.py  blog.md  checkpoint_step20.json  openenv.yaml  preliminary_training_log.json  pyproject.toml  requirements.txt  reward_curve.json  training_results.json
api/: server.py
environment/: adversary.py  models.py  patch_env.py
examples/: github_action.yml  pre-commit-hook.sh
project/: README.md  __init__.py  agent.py  colab_training (3).ipynb  colab_training.ipynb  colab_training__2_.ipynb  colab_training__6_.ipynb  compat_eos.py  dataset_builder.py  demo_trace.py  evaluate.py  hackathon_metrics.py  hidden_compliance.py  model_training (2).ipynb  model_training_.ipynb  plot_submission_figures.py  rebuild_colab_v2.py  requirements.txt  reward_log_format.py  rl_trainer.py  smoke_test.py  task_generator.py  train_model.py  training_log_summary.py  utils.py
server/: app.py
tests/: test_agent.py  test_env.py
tools/: demo_2of2.py  demo_baseline.py  demo_failure.py  demo_selfplay.py  demo_success.py  final_demo.py  generate_training_results.py  grpo_training.py  preliminary_training.py  smoke_test.py
ui/: app.py  streamlit_app.py
(+44 files in other folders)
