[project]
name = "compliancepatchbench"
version = "0.1.0"
description = "Non-cheatable compliance patching benchmark with SFT and RL self-improvement"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore:Please use `import python_multipart` instead\\.:PendingDeprecationWarning:starlette\\.formparsers"
]